# hipnuc_imu

./: CMakeLists.txt  README.md
config/: hipnuc_config.yaml
launch/: imu_spec_msg.launch.py
src/: hipnuc.h  hipnuc_dec.c  hipnuc_driver.cpp  hipnuc_imu_driver.cpp
